GitVersion1/objects/Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for controlling the Triggers on every object</description>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Mapping__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Application Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCRDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCRDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateRecordItem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DuplicateRecordItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UserTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Report</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>